// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      Search
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className=""
        onClick={undefined}
        type="button"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="interactions"
  >
    <button
      className=""
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  I'm a button!
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  Search
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    className=""
    onClick={undefined}
    type="button"
  >
    Search
  </button>
</form>
`;
